Se agregaron links a cartas

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <a href="bulbasaur.html">
                     <div class="text-center">
-                        <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png"
-                            alt="">
+                        <img class="img-thumbnail bg-light"
+                            src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="">
                     </div>
                     <div class="row">
                         <div class="col offset-1">
@@ -37,7 +37,7 @@
                             </small>
                             <p class="h3">Bulbasaur</p>
                             <span class="badge badge-success">Planta</span>
-                            <span class="badge badge-veneno" >Veneno</span>
+                            <span class="badge badge-veneno">Veneno</span>
                         </div>
                     </div>
                 </a>
@@ -45,56 +45,63 @@
 
 
             <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="text-center">
-                    <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/002.png"
-                        alt="">
-                </div>
-                <div class="row">
-                    <div class="col offset-1">
-                        <small class="text-muted">
-                            <strong>N.º 002</strong>
-                        </small>
-                        <p class="h3">Ivysaur</p>
-                        <span class="badge badge-success">Planta</span>
-                        <span class="badge badge-veneno" >Veneno</span>
+                <a href="bulbasaur.html">
+                    <div class="text-center">
+                        <img class="img-thumbnail bg-light"
+                            src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/002.png" alt="">
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="col offset-1">
+                            <small class="text-muted">
+                                <strong>N.º 002</strong>
+                            </small>
+                            <p class="h3">Ivysaur</p>
+                            <span class="badge badge-success">Planta</span>
+                            <span class="badge badge-veneno">Veneno</span>
+                        </div>
+                    </div>
+                </a>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="text-center">
-                    <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/003.png"
-                        alt="">
-                </div>
-                <div class="row">
-                    <div class="col offset-1">
-                        <small class="text-muted">
-                            <strong>N.º 003</strong>
-                        </small>
-                        <p class="h3">Venusaur</p>
-                        <span class="badge badge-success">Planta</span>
-                        <span class="badge badge-veneno" >Veneno</span>
+
+                <a href="bulbasaur.html">
+                    <div class="text-center">
+                        <img class="img-thumbnail bg-light"
+                            src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/003.png" alt="">
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="col offset-1">
+                            <small class="text-muted">
+                                <strong>N.º 003</strong>
+                            </small>
+                            <p class="h3">Venusaur</p>
+                            <span class="badge badge-success">Planta</span>
+                            <span class="badge badge-veneno">Veneno</span>
+                        </div>
+                    </div>
+                </a>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="text-center">
-                    <img class="img-thumbnail bg-light" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png"
-                        alt="">
-                </div>
-                <div class="row">
-                    <div class="col offset-1">
-                        <small class="text-muted">
-                            <strong>N.º 004</strong>
-                        </small>
-                        <p class="h3">Charmander</p>
-                        <span class="badge badge-danger">Fuego</span>
+                <a href="bulbasaur.html">
+                    <div class="text-center">
+                        <img class="img-thumbnail bg-light"
+                            src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png" alt="">
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="col offset-1">
+                            <small class="text-muted">
+                                <strong>N.º 004</strong>
+                            </small>
+                            <p class="h3">Charmander</p>
+                            <span class="badge badge-danger">Fuego</span>
+                        </div>
+                    </div>
+                </a>
             </div>
 
 
 
-            
+
         </div>
     </div>
 
